--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "onLanguage:java",
         "onLanguage:objective-c",
         "onLanguage:pawn",
-        "onLanguage:vala"
+        "onLanguage:vala",
+        "onLanguage:apex"
     ],
     "main": "./out/src/extension",
     "contributes": {
@@ -59,6 +60,9 @@
             },
             {
                 "id": "vala"
+            },
+            {
+                "id": "apex"
             }
         ],
         "configuration": {
