--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
         "@types/node": "^8.0.27",
         "@types/request": "^2.0.3",
         "typescript": "^2.5.2",
+        "vsce": "^1.30.0",
         "vscode": "^1.1.5"
     }
 }
