--- a/package.json
+++ b/package.json
@@ -62,7 +62,10 @@
                     "scope": "window"
                 },
                 "uncrustify.configPath": {
-                    "type": "string",
+                    "type": [
+                        "string",
+                        "null"
+                    ],
                     "default": null,
                     "description": "Path to the uncrustify configuration file",
                     "scope": "resource"
@@ -126,13 +129,13 @@
     },
     "dependencies": {
         "meta-pkg": "^0.6.4",
-        "request": "^2.81.0"
+        "request": "^2.83.0"
     },
     "devDependencies": {
-        "@types/node": "^8.0.27",
-        "@types/request": "^2.0.3",
-        "typescript": "^2.5.2",
-        "vsce": "^1.30.0",
-        "vscode": "^1.1.5"
+        "@types/node": "^8.0.47",
+        "@types/request": "^2.0.7",
+        "typescript": "^2.5.3",
+        "vsce": "^1.31.1",
+        "vscode": "^1.1.6"
     }
 }
