--- a/package.json
+++ b/package.json
@@ -128,14 +128,16 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
-        "meta-pkg": "^0.6.4",
+        "fs-extra": "^4.0.2",
+        "meta-pkg": "^0.7.1",
         "request": "^2.83.0"
     },
     "devDependencies": {
+        "@types/fs-extra": "^4.0.3",
         "@types/node": "^8.0.47",
         "@types/request": "^2.0.7",
-        "typescript": "^2.5.3",
-        "vsce": "^1.31.1",
+        "typescript": "^2.6.1",
+        "vsce": "^1.32.0",
         "vscode": "^1.1.6"
     }
 }
