--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "onLanguage:java",
         "onLanguage:objective-c",
         "onLanguage:pawn",
+        "onLanguage:pde",
         "onLanguage:vala",
         "workspaceContains:uncrustify.cfg",
         "onCommand:uncrustify.create",
@@ -133,9 +134,9 @@
         "request": "^2.83.0"
     },
     "devDependencies": {
-        "@types/fs-extra": "^4.0.3",
-        "@types/node": "^8.0.47",
-        "@types/request": "^2.0.7",
+        "@types/fs-extra": "^4.0.4",
+        "@types/node": "^8.0.51",
+        "@types/request": "^2.0.8",
         "typescript": "^2.6.1",
         "vsce": "^1.32.0",
         "vscode": "^1.1.6"
