--- a/package.json
+++ b/package.json
@@ -152,9 +152,9 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^5.0.4",
-        "@types/node": "^8.x.x",
-        "@types/request": "^2.47.1",
-        "typescript": "^3.1.3",
+        "@types/node": "^8.10.36",
+        "@types/request": "^2.48.0",
+        "typescript": "^3.1.4",
         "vsce": "^1.52.0",
         "vscode": "^1.1.21"
     }
