--- a/package.json
+++ b/package.json
@@ -147,15 +147,13 @@
     },
     "dependencies": {
         "fs-extra": "^7.0.1",
-        "meta-pkg": "^0.7.3",
-        "request": "^2.88.0"
+        "meta-pkg": "^0.7.3"
     },
     "devDependencies": {
         "@types/fs-extra": "^5.0.4",
-        "@types/node": "^8.10.38",
-        "@types/request": "^2.48.1",
-        "typescript": "^3.1.6",
-        "vsce": "^1.53.2",
-        "vscode": "^1.1.22"
+        "@types/node": "^8.10.39",
+        "typescript": "^3.2.2",
+        "vsce": "^1.54.0",
+        "vscode": "^1.1.26"
     }
 }
