--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,5 @@
 .vscode/**
+node_modules
 typings/**
 out/test/**
 test/**
@@ -6,3 +7,4 @@ src/**
 **/*.map
 .gitignore
 tsconfig.json
+webpack.config.ts
