--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/LaurentTreguier/vscode-uncrustify/issues"
     },
     "engines": {
-        "vscode": "^1.31.0"
+        "vscode": "^1.33.1"
     },
     "categories": [
         "Formatters"
@@ -176,19 +176,19 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
-        "fs-extra": "^7.0.1",
+        "fs-extra": "^8.0.1",
         "meta-pkg": "^0.7.5"
     },
     "devDependencies": {
-        "@types/fs-extra": "^5.0.5",
-        "@types/node": "10.x.x",
-        "@types/webpack": "^4.4.26",
-        "ts-loader": "^5.3.3",
-        "ts-node": "^8.0.3",
-        "typescript": "^3.4.1",
-        "vsce": "^1.59.0",
-        "vscode": "^1.1.33",
-        "webpack": "^4.29.6",
-        "webpack-cli": "^3.3.0"
+        "@types/fs-extra": "^5.1.0",
+        "@types/node": "^10.x.x",
+        "@types/webpack": "^4.4.31",
+        "ts-loader": "^6.0.0",
+        "ts-node": "^8.1.0",
+        "typescript": "^3.4.5",
+        "vsce": "^1.61.0",
+        "vscode": "^1.1.34",
+        "webpack": "^4.31.0",
+        "webpack-cli": "^3.3.2"
     }
 }
