--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/LaurentTreguier/vscode-uncrustify/issues"
     },
     "engines": {
-        "vscode": "^1.33.1"
+        "vscode": "^1.36.0"
     },
     "categories": [
         "Formatters"
@@ -187,23 +187,22 @@
     "scripts": {
         "vscode:prepublish": "webpack --mode production",
         "compile": "webpack --mode none",
-        "watch": "webpack --mode none --watch",
-        "postinstall": "node ./node_modules/vscode/bin/install"
+        "watch": "webpack --mode none --watch"
     },
     "dependencies": {
-        "fs-extra": "^8.0.1",
+        "fs-extra": "^8.1.0",
         "meta-pkg": "^0.7.7"
     },
     "devDependencies": {
-        "@types/fs-extra": "^5.1.0",
-        "@types/node": "^10.x.x",
-        "@types/webpack": "^4.4.32",
-        "ts-loader": "^6.0.2",
-        "ts-node": "^8.2.0",
-        "typescript": "^3.5.1",
-        "vsce": "^1.62.0",
-        "vscode": "^1.1.34",
-        "webpack": "^4.32.2",
-        "webpack-cli": "^3.3.2"
+        "@types/fs-extra": "^8.0.0",
+        "@types/node": "^10.14.12",
+        "@types/vscode": "^1.36.0",
+        "@types/webpack": "^4.4.34",
+        "ts-loader": "^6.0.4",
+        "ts-node": "^8.3.0",
+        "typescript": "^3.5.2",
+        "vsce": "^1.64.0",
+        "webpack": "^4.35.2",
+        "webpack-cli": "^3.3.5"
     }
 }
