--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "url": "https://github.com/LaurentTreguier/vscode-uncrustify/issues"
     },
     "engines": {
-        "vscode": "^1.40.0"
+        "vscode": "^1.42.0"
     },
     "categories": [
         "Formatters"
@@ -172,18 +172,19 @@
         "watch": "webpack --mode none --watch"
     },
     "dependencies": {
-        "fs-extra": "^8.1.0"
+        "fs-extra": "^8.1.0",
+        "node": "^12.16.1"
     },
     "devDependencies": {
-        "@types/fs-extra": "^8.0.1",
+        "@types/fs-extra": "^8.1.0",
         "@types/node": "^12.12.14",
-        "@types/vscode": "^1.40.0",
-        "@types/webpack": "^4.41.0",
+        "@types/vscode": "^1.42.0",
+        "@types/webpack": "^4.41.7",
         "ts-loader": "^6.2.1",
-        "ts-node": "^8.5.4",
-        "typescript": "^3.7.3",
-        "vsce": "^1.70.0",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10"
+        "ts-node": "^8.6.2",
+        "typescript": "^3.8.3",
+        "vsce": "^1.74.0",
+        "webpack": "^4.41.6",
+        "webpack-cli": "^3.3.11"
     }
 }
